Fixed bugs with images

--- a/1_bookstore/html/index.html
+++ b/1_bookstore/html/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/style_copy.css">
+    <link rel="stylesheet" href="/1_bookstore/css/normalize.css">
+    <link rel="stylesheet" href="/1_bookstore/css/style_adaptive.css">
 </head>
 <body>
     <!-- Шапка сайта -->
@@ -32,7 +32,7 @@
     <section class="hero">
         <div class="hero__container" id="start">
             <div class="hero__img-wrap">
-                <img src="/img/hero/book.jpg" alt="Книга Путь фрилансера" class="hero__img">
+                <img src="/1_bookstore/img/hero/book.jpg" alt="Книга Путь фрилансера" class="hero__img">
                 <span class="hero__discount">Скидка 30%</span>
             </div>
             <!-- /.hero__img-wrap -->
@@ -49,7 +49,7 @@
                 <!-- /.hero__char -->
                 <div class="hero__price">
                     <span class="hero__pricetag">490 ₽</span>
-                    <img src="/img/hero/icon.png" class="hero__icon">
+                    <img src="/1_bookstore/img/hero/icon.png" class="hero__icon">
                     <a href="#" class="hero__favorites">Добавить в избранное</a>
                 </div>
                 <!-- /.hero__price -->
