Create styles for header-top

--- a/2_hotel-booking/index.html
+++ b/2_hotel-booking/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/2_hotel-booking/css/normalize.css">
     <link rel="stylesheet" href="/2_hotel-booking/css/style.css">
     <title>Best Tour Plan - Hotel Booking</title>
   </head>
@@ -12,14 +11,14 @@
     <div class="container">
       <header class="header">
         <div class="header__top">
-          <a href="#" class="logo"
+          <a href="#" class="header__logo"
             ><img
               src="/2_hotel-booking/img/logo-horizontal.svg"
               alt="Logo: Best Tour Plan"
-              class="logo__img"
+              class="header__logo-img"
           /></a>
 
-          <form action="#" class="search">
+          <form action="#" class="search header__search">
             <input
               type="text"
               placeholder="Search Location"
