--- a/2_hotel-booking/index.html
+++ b/2_hotel-booking/index.html
@@ -9,16 +9,16 @@
   </head>
   <body>
     <div class="container">
-      <header class="header">
-        <div class="header__top">
-          <a href="#" class="header__logo"
+      <header class="navbar">
+        <div class="navbar__top">
+          <a href="#" class="navbar__logo"
             ><img
               src="/2_hotel-booking/blocks/header/logo-horizontal.svg"
               alt="Logo: Best Tour Plan"
-              class="header__logo-img"
+              class="navbar__logo-img"
           /></a>
 
-          <form action="#" class="search header__search">
+          <form action="#" class="search navbar__search">
             <input
               type="text"
               placeholder="Search Location"
@@ -42,30 +42,30 @@
             <span class="user__name">Nathan</span>
           </a>
         </div>
-        <!-- /.header__top -->
+        <!-- /.navbar__top -->
 
-        <nav class="header-menu">
-          <ul class="header-menu__list">
-            <li class="header-menu__item">
-              <a href="#" class="header-menu__link">All Deals</a>
+        <nav class="navbar-menu">
+          <ul class="navbar-menu__list">
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">All Deals</a>
             </li>
-            <li class="header-menu__item">
-              <a href="#" class="header-menu__link">Hotels</a>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Hotels</a>
             </li>
-            <li class="header-menu__item">
-              <a href="#" class="header-menu__link">Activities</a>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Activities</a>
             </li>
-            <li class="header-menu__item">
-              <a href="#" class="header-menu__link">Hotel Day Packages</a>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Hotel Day Packages</a>
             </li>
-            <li class="header-menu__item">
-              <a href="#" class="header-menu__link">Restaurants</a>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Restaurants</a>
             </li>
-            <li class="header-menu__item">
-              <a href="#" class="header-menu__link">Events</a>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Events</a>
             </li>
-            <li class="header-menu__item">
-              <a href="#" class="header-menu__link">Rodrigues</a>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Rodrigues</a>
             </li>
           </ul>
         </nav>
